Fix bug orange background on small screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,7 +46,7 @@ html {
   -ms-flex-direction: column;
   flex-direction: column;
   font-family: 'gotham-book';
-  height: 100%;
+  min-height: 100%;
   margin: 0;
   padding: 0;
 }
